--- a/updated.html
+++ b/updated.html
@@ -5,9 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://js.arcgis.com/4.16/"></script>
+  <link
+      rel="stylesheet"
+      href="https://js.arcgis.com/4.16/esri/themes/light/main.css"
+    />
+    <link
+      rel="stylesheet"
+      href="main.css"
+    />
   <script type="module" src="app.js"></script>
 </head>
-<body>
+<body style>
   <p> Last update:<span id="updated"></span></p>
 </body>
 </html>
