--- a/updated.html
+++ b/updated.html
@@ -16,7 +16,7 @@
   <script type="module" src="app.js"></script>
 </head>
 <body style>
-  <p> Last update: <span id="updated"></span></p>
-  <p style="font-size: small;">Note: This data&nbsp;includes Gallatin County residents diagnosed or hospitalized in other states/counties, and residents from other states/counties recovering in Gallatin County. Updates are made by noon Monday through Friday. Weekend data will be updated on Monday. Information is reported based on the previous day. It is highly likely that the information on this dashboard and map will change based on further public health investigation.&nbsp;<a href="http://docs.msl.mt.gov/covid19/COVID19_map_dashboard_metadata.pdf">Click here to learn more about the information on this dashboard and the Montana Coronavirus Map</a>.&nbsp;Source Data:&nbsp;<a href="https://dphhs.mt.gov/publichealth/cdepi/diseases/coronavirusmt/demographics">Montana Department of Health &amp; Human Services</a>.&nbsp;</p>
+  <span> Last update: <span id="updated"></span></span><br>
+  <span>Note: This data&nbsp;includes Gallatin County residents diagnosed or hospitalized in other states/counties, and residents from other states/counties recovering in Gallatin County. Updates are made by noon Monday through Friday. Weekend data will be updated on Monday. Information is reported based on the previous day. It is highly likely that the information on this dashboard and map will change based on further public health investigation.&nbsp;<a href="http://docs.msl.mt.gov/covid19/COVID19_map_dashboard_metadata.pdf">Click here to learn more about the information on this dashboard and the Montana Coronavirus Map</a>.&nbsp;Source Data:&nbsp;<a href="https://dphhs.mt.gov/publichealth/cdepi/diseases/coronavirusmt/demographics">Montana Department of Health &amp; Human Services</a>.&nbsp;</span>
 </body>
 </html>
