--- a/updated.html
+++ b/updated.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="main.css"
     />
-  <script type="module" src="app.js"></script>
+  <script src="app.js"></script>
 </head>
 <body style>
   <p> Last update: <span id="updated"></span><br>
